File listing now disappears on UI when abort is called, Moved session ID receiving to when server is messaged to verify space availability, Fixed scrollbar error where no scrollbar is needed

--- a/client/app/styles/app.css
+++ b/client/app/styles/app.css
@@ -101,7 +101,7 @@
 .files {
   padding-top: 0;
   padding-bottom: 0;
-  overflow: scroll;
+  overflow: auto;
   min-height: 50px;
   max-height: 100px;
   overflow-x: hidden;
